chore: add REDIS_POPPIT_BUILDER_LIST env to docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - REDIS_CHANNEL=${REDIS_CHANNEL:-slack-commands}
       - REDIS_VIEW_SUBMISSION_CHANNEL=${REDIS_VIEW_SUBMISSION_CHANNEL:-slack-relay-view-submission}
       - REDIS_POPPIT_LIST=${REDIS_POPPIT_LIST:-poppit:notifications}
+      - REDIS_POPPIT_BUILDER_LIST=${REDIS_POPPIT_BUILDER_LIST:-poppit:build-commands}
       - SLACK_BOT_TOKEN=${SLACK_BOT_TOKEN}
       - GITHUB_ORG=${GITHUB_ORG}
       - WORKING_DIR=${WORKING_DIR:-/tmp}
